<resources>
    <string name="app_name">MyWebBrowser</string>
    <string name="serch_site">검색 사이트</string>
    <string name="naver">네이버</string>
    <string name="google">구글</string>
    <string name="daum">다음</string>
    <string name="developer_info">개발자 정보</string>
    <string name="call">전화하기</string>
    <string name="send_text">문자보내기</string>
    <string name="email">이메일 보내기</string>
    <string name="home">Home</string>
    <string name="page_share">페이지 공유</string>
    <string name="basic_browser_open">기본 브라우저에서 열기</string>
</resources>
