<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/serch_site">
        <menu
        >
            <item android:title="@string/naver" android:id="@+id/action_naver"/>
            <item android:id="@+id/action_google" android:title="@string/google"/>
            <item android:title="@string/daum" android:id="@+id/action_daum"/>
        </menu>
    </item>
    <item android:title="@string/developer_info">
        <menu
        >
            <item android:title="@string/call" android:id="@+id/action_call"/>
            <item android:title="@string/send_text" android:id="@+id/action_send_text"/>
            <item android:title="@string/email" android:id="@+id/action_email"/>
        </menu>
    </item>
    <item android:title="@string/home" android:id="@+id/action_home" android:icon="@drawable/ic_home_black_24dp"
          app:showAsAction="ifRoom"/>
</menu>